--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-handlebars": "^7.1.2",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "method-override": "^3.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
     "mongoose-slug-generator": "^1.0.4",
