--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap-icons": "^1.11.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
@@ -19,10 +20,11 @@
     "method-override": "^3.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
-    "mongoose-slug-generator": "^1.0.4",
+    "mongoose-delete": "^1.0.2",
     "morgan": "^1.10.0",
     "node-sass": "^9.0.0",
     "nodemon": "^3.0.3",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "slugify": "^1.6.6"
   }
 }
