--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "method-override": "^3.0.0",
